test/visibility/except/blockSecondaryMethod.good
blockSecondaryMethod.chpl:9: error: unresolved call 'Foo.newMethod(1)'
blockSecondaryMethod.chpl:9: note: because no functions named newMethod found in scope
